# mediasoup-broadcaster-demo

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindCPR.cmake
include/: Broadcaster.hpp  MediaStreamTrackFactory.hpp
include/fakegenerators/: fake_periodic_video_track_source.h  frame_generator_capturer.h  frame_generator_capturer_video_track_source.h
scripts/: format.sh  get_dep.sh  run.sh
src/: Broadcaster.cpp  MediaStreamTrackFactory.cpp  fake_frame_source.cc  frame_generator.cc  frame_generator_capturer.cc  frame_utils.cc  main.cpp  peerConnectionUtils.cpp
src/fakegenerators/: create_frame_generator.cc  fake_audio_capture_module.cc  fake_frame_source.cc  file_utils.cc  frame_generator.cc  frame_generator_capturer.cc  frame_utils.cc  ivf_video_frame_generator.cc  test_video_capturer.cc
